server + view cleanup

--- a/views/index.html
+++ b/views/index.html
@@ -33,22 +33,20 @@
         </form>
         <hr>
         <h4>Report thread (PUT /api/threads/:board)</h4>
-        <form id="reportThread">
+        <form action="/api/threads/test" method="post" id="reportThread">
           <input type='text' placeholder='board' id='board2' name='board' required=''><br>
           <input type='text' placeholder='id to report' name='thread_id' required=''><br>
           <input type="submit" value="Submit">
         </form>
         <hr>
         <h4>Delete thread (DELETE /api/threads/:board)</h4>
-        <form id="deleteThread">
+        <form action="/api/threads/test" method="post" id="deleteThread">
           <input type='text' placeholder='board' id='board3' name='board' required=''><br>
           <input type='text' placeholder='id to delete' name='thread_id' required=''><br>
           <input type='text' placeholder='password' name='delete_password' required=''><br>
           <input type="submit" value="Submit">
         </form>
         <hr>
-        
-        
         <h4>New reply (POST /api/replies/:board)</h4>
         <form action="/api/replies/test" method="post" id="newReply">
           <input type='text' placeholder='board' id='board4' name='board' required=''><br>
@@ -59,7 +57,7 @@
         </form>
         <hr>
         <h4>Report reply (PUT /api/replies/:board)</h4>
-        <form id="reportReply">
+        <form action="/api/replies/test" method="post" id="reportReply">
           <input type='text' placeholder='board' id='board5' name='board' required=''><br>
           <input type='text' placeholder='thread id' name='thread_id' required=''><br>
           <input type='text' placeholder='id to report' name='reply_id' required=''><br>
@@ -67,7 +65,7 @@
         </form>
         <hr>
         <h4>Delete reply (DELETE /api/replies/:board)</h4>
-        <form id="deleteReply">
+        <form action="/api/replies/test" method="post" id="deleteReply">
           <input type='text' placeholder='board' id='board6' name='board' required=''><br>
           <input type='text' placeholder='thread id' name='thread_id' required=''><br>
           <input type='text' placeholder='id to delete' name='reply_id' required=''><br>
@@ -146,3 +144,4 @@
    </script>
   </body>
 </html>
+
